# excalidraw-agent-cli

./: .gitignore  LICENSE  README.md  dagre-layout.js  package-lock.json  package.json  pyproject.toml
docs/: skill-files-graph.json  skill-files.excalidraw  skill-pipeline-graph.json  two-approaches-graph.json  two-approaches.excalidraw  use-case-research.md
examples/: GALLERY.md  README.md
examples/agent-debug-session/: README.md  agent-debug-session.excalidraw  graph.json
examples/arch/: README.md  arch.excalidraw  graph.json
examples/auth-sequence/: README.md  auth-sequence.excalidraw
examples/blog-post-demo/: README.md
examples/cicd/: README.md  cicd.excalidraw  generate.sh
examples/codebase-docs-demo/: README.md
examples/customer-journey/: README.md  diagram.excalidraw  graph.json
examples/data-pipeline/: README.md  data-pipeline.excalidraw  graph.json
examples/decision-tree/: decision-tree.excalidraw  graph.json
examples/er-diagram/: er-diagram.excalidraw
examples/flowchart/: README.md  flowchart.excalidraw  graph.json
examples/k8s-cluster/: README.md  graph.json  k8s-cluster.excalidraw
examples/login-journey/: wireframe.excalidraw
examples/microservices/: README.md  graph.json  microservices.excalidraw
examples/mindmap/: README.md  (+2 more)
excalidraw_agent_cli/: __init__.py  __main__.py  cli.py
skill/: SKILL.md
templates/: architecture-example.sh  class-diagram-example.sh  er-diagram-example.sh  flowchart-example.sh  gantt-example.sh  mindmap-example.sh  sequence-example.sh  state-diagram-example.sh
tests/: test_core.py  test_e2e.py
(+67 files in other folders)
